--- a/addedTask(EatLunch).html
+++ b/addedTask(EatLunch).html
@@ -9,12 +9,9 @@
 	<form>
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1">
-		<label for="task1"> Call Mom </label><br>
-		<input type = "checkbox", id="task2", name="task2", value="task2">
-		<label for="task2"> Text John </label><br>
-		<input type = "checkbox", id="task3", name="task3", value="task3">
-		<label for="task3"> Get spam </label><br>
-
+        <label for="task1"> Buy new John Grisham book </label><br>
+        <input type = "checkbox", id="task2", name="task2", value="task2">
+		<label for="task2"> Eat Lunch </label><br>
 	</ul>
 
 	New task:<br> <input type = "text", id = "newTask", name="newTask">
