Updated visuals of functionalities across all html files

--- a/preDeleteTask.html
+++ b/preDeleteTask.html
@@ -10,13 +10,19 @@
     <div class="tasks">
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1" checked>
-        <label for="task1"> Buy new John Grisham book </label><br>
+        <label for="task1"> Buy new John Grisham book </label>
+        <input type="button" id="edit" value="edit"><br>
+
         <input type = "checkbox", id="task2", name="task2", value="task2" checked>
-        <label for="task2"> Eat Lunch </label><br>
+        <label for="task2"> Eat Lunch </label>
+        <input type="button" id="edit" value="edit"><br>
+
         <input type = "checkbox", id="task3", name="task3", value="task3">
-        <label for="task3"> Call Mom</label><br>
-        <input type = "checkbox", id="task3", name="task3", value="task3" checked>
-        <label for="task3"> Text John about bank statements</label>
+        <label for="task3"> Call Mom</label>
+        <input type="button" id="edit" value="edit"><br>
+
+        <input type = "checkbox", id="task4", name="task4", value="task4" checked>
+        <label for="task4"> Text John about bank statements</label>
 	    <input type="button" id="edit" value="edit">
     </ul>
     </div>
