--- a/addedTask(GrishamBook).html
+++ b/addedTask(GrishamBook).html
@@ -2,18 +2,23 @@
 <html>
 <head>
 	<title> "cs124 lab 1"</title>
-	<!--<link rel="stylesheet" href="lab1.css">-->
+	<link rel="stylesheet" href="lab1.css">
 </head>
 <body>
 	<h1>List of things to do</h1>
 	<form action = "addedTask(EatLunch).html">
+	<div class="tasks">
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1">
-		<label for="task1"> Buy new John Grisham book </label><br>
-	</ul>
+		<label for="task1"> Buy new John Grisham book </label>
+		<input type="button" id="edit" value="edit"><br>
 
-	New task:<br> <input type = "text", id = "newTask", name="newTask">
-	<input type="submit" value="Create Task">
+	</ul>
+	</div>
+
+		New task:<br> <input type = "text", id = "newTask", name="newTask">
+		<input type="submit" id="create" value="Create Task"><br>
+		<input type="button" id="clear" value="Clear Completed Tasks">
 
 </form>
 
