--- a/deleteTask.html
+++ b/deleteTask.html
@@ -2,22 +2,24 @@
 <html>
 <head>
 	<title> "cs124 lab 1"</title>
-	<!--<link rel="stylesheet" href="lab1.css">-->
+	<link rel="stylesheet" href="lab1.css">
 </head>
 <body>
 	<h1>List of things to do</h1>
-	<form action =>
+	<form>
+	<div class="tasks">
 	<ul>
        
         <input type = "checkbox", id="task3", name="task3", value="task3">
-        <label for="task3"> Call Mom</label><br>
+        <label for="task3"> Call Mom</label>
+		<input type="button" id="edit" value="edit">
 
 	</ul>
+	</div>
 
 	New task:<br> <input type = "text", id = "newTask", name="newTask">
-    <input type="button" value="Create Task"><br>
-    <input type="submit" value="Clear Completed Tasks">
-    
+	<input type="button" id="create" value="Create Task"><br>
+	<input type="submit" id="clear" value="Clear Completed Tasks">
 
 </form>
 
