--- a/renameTextJohn.html
+++ b/renameTextJohn.html
@@ -2,25 +2,35 @@
 <html>
 <head>
 	<title> "cs124 lab 1"</title>
-	<!--<link rel="stylesheet" href="lab1.css">-->
+	<link rel="stylesheet" href="lab1.css">
 </head>
 <body>
 	<h1>List of things to do</h1>
 	<form>
+	<div class="tasks">
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1">
-        <label for="task1"> Buy new John Grisham book </label><br>
-        <input type = "checkbox", id="task2", name="task2", value="task2">
-        <label for="task2"> Eat Lunch </label><br>
-        <input type = "checkbox", id="task3", name="task3", value="task3">
-        <label for="task3"> Call Mom</label><br>
-        <input type = "checkbox", id="task3", name="task3", value="task3">
-        <label for="task3"> Text John about bank statements</label>
-	    <input type="submit" value="edit">
-	</ul>
+        <label for="task1"> Buy new John Grisham book </label>
+		<input type="button" class="edit" value="edit"><br>
 
-	New task:<br> <input type = "text", id = "newTask", name="newTask">
-	<input type="submit" value="Create Task">
+        <input type = "checkbox", id="task2", name="task2", value="task2">
+        <label for="task2"> Eat Lunch </label>
+		<input type="button" class="edit" value="edit"><br>
+
+        <input type = "checkbox", id="task3", name="task3", value="task3">
+        <label for="task3"> Call Mom</label>
+		<input type="button" class="edit" value="edit"><br>
+
+        <input type = "checkbox", id="task4", name="task4", value="task4">
+        <label for="task4"> Text John about bank statements</label>
+	    <input type="button" class="edit" value="edit">
+	</ul>
+	</div>
+
+		New task:<br> <input type = "text", id = "newTask", name="newTask">
+		<input type="button" id="create" value="Create Task"><br>
+		<input type="button" id="clear" value="Clear Completed Tasks">
+
 
 </form>
 
