--- a/startEmptyList.html
+++ b/startEmptyList.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title> "cs124 lab 1"</title>
-	<!--<link rel="stylesheet" href="lab1.css">-->
+	<link rel="stylesheet" href="lab1.css">
 </head>
 <body>
     <h1>List of things to do</h1>
     <p>Nothing to do!</p>
 	<form action = "addedTask(GrishamBook).html">
-	New task:<br> <input type = "text", id = "newTask", name="newTask">
-	<input type="submit" value="Create Task" >
+		New task:<br> <input type = "text", id = "newTask", name="newTask">
+		<input type="submit" id="create" value="Create Task"><br>
+		<input type="button" id="clear" value="Clear Completed Tasks">
 
 </form>
 
