Last commit before submission of version 1

--- a/callMom.html
+++ b/callMom.html
@@ -10,7 +10,7 @@
 	<ul>
         <input type = "checkbox", id="task1", name="task1", value="task1">
 		<label for="task1"> Call Mom</label>
-		<input type="button" id="edit" value="edit"><br>
+		<input type="button" class="edit" value="edit"><br>
 
 	</ul>
 
