--- a/addedTask(EatLunch).html
+++ b/addedTask(EatLunch).html
@@ -11,11 +11,11 @@
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1">
         <label for="task1"> Buy new John Grisham book </label>
-		<input type="button" id="edit" value="edit"><br>
+		<input type="button" class="edit" value="edit"><br>
 
         <input type = "checkbox", id="task2", name="task2", value="task2">
 		<label for="task2"> Eat Lunch </label>
-		<input type="button" id="edit" value="edit"><br>
+		<input type="button" class="edit" value="edit"><br>
 	</ul>
 
 		New task:<br> <input type = "text", id = "newTask", name="newTask">
