--- a/addedTask(GrishamBook).html
+++ b/addedTask(GrishamBook).html
@@ -11,7 +11,7 @@
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1">
 		<label for="task1"> Buy new John Grisham book </label>
-		<input type="button" id="edit" value="edit"><br>
+		<input type="button" class="edit" value="edit"><br>
 
 	</ul>
 	</div>
