--- a/preDeleteTask.html
+++ b/preDeleteTask.html
@@ -11,19 +11,19 @@
 	<ul>
 		<input type = "checkbox", id="task1", name="task1", value="task1" checked>
         <label for="task1"> Buy new John Grisham book </label>
-        <input type="button" id="edit" value="edit"><br>
+        <input type="button" class="edit" value="edit"><br>
 
         <input type = "checkbox", id="task2", name="task2", value="task2" checked>
         <label for="task2"> Eat Lunch </label>
-        <input type="button" id="edit" value="edit"><br>
+        <input type="button" class="edit" value="edit"><br>
 
         <input type = "checkbox", id="task3", name="task3", value="task3">
         <label for="task3"> Call Mom</label>
-        <input type="button" id="edit" value="edit"><br>
+        <input type="button" class="edit" value="edit"><br>
 
         <input type = "checkbox", id="task4", name="task4", value="task4" checked>
         <label for="task4"> Text John about bank statements</label>
-	    <input type="button" id="edit" value="edit">
+	    <input type="button" class="edit" value="edit">
     </ul>
     </div>
 
