Added markdown file

--- a/deleteTask.html
+++ b/deleteTask.html
@@ -12,7 +12,7 @@
        
         <input type = "checkbox", id="task3", name="task3", value="task3">
         <label for="task3"> Call Mom</label>
-		<input type="button" id="edit" value="edit">
+		<input type="button" class="edit" value="edit">
 
 	</ul>
 	</div>
