--- a/addedTask(GrishamBook).html
+++ b/addedTask(GrishamBook).html
@@ -18,6 +18,7 @@
 
 		New task:<br> <input type = "text", id = "newTask", name="newTask">
 		<input type="submit" id="create" value="Create Task"><br>
+		<input type="button" id="hide" value="Hide Completed Tasks">
 		<input type="button" id="clear" value="Clear Completed Tasks">
 
 </form>
