--- a/beforeRenameTextJohn.html
+++ b/beforeRenameTextJohn.html
@@ -29,6 +29,7 @@
 
 		New task:<input type = "text", id = "newTask", name="newTask">
 		<input type="button" id="create" value="Create Task"><br>
+		<input type="button" id="hide" value="Hide Completed Tasks">
 		<input type="button" id="clear" value="Clear Completed Tasks">
 </form>
 
