--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Links to final design pages</title>
-
 </head>
 <body>
+    <h1>Links to Final Design Pages</h1>
     <ol>
-       <li> Empty list </li>
-           create an item named "Buy new John Grisham book"
-           In a non-empty list, create an item named "Eat Lunch"
-           Mark the item named "Call Mom" completed (assumes there exists an item named "Call Mom").
-           Rename the item "Text John" to "Text John about bank statements" (assumes there exists an item named "Text John").
-           Show only uncompleted items.
-           Delete all completed items.
+        <li>Create an item named "Buy new John Grisham book"</li>
+        <ol>
+            <li><a href ="startEmptyList.html">page 1</a></li>
+            <li><a href ="addedTask(GrishamBook).html">page 2 (end)</a></li>
+        </ol>
+        <li>In a non-empty list, create an item named "Eat Lunch"</li>
+        <ol>
+            <li><a href ="addedTask(GrishamBook).html">page 1</a></li>
+            <li><a href ="addedTask(EatLunch).html">page 2 (end)</a></li>
+        </ol>
+        <li>Mark the item named "Call Mom" completed</li>
+        <ol>
+            <li><a href ="callMom.html">page 1</a></li>
+        </ol>
+        <li>Rename the item "Text John" to "Text John about bank statements"</li>
+        <ol>
+            <li><a href ="beforeRenameTextJohn.html">page 1</a></li>
+            <li><a href ="renamingTextJohn.html">page 2 </a></li>
+            <li><a href ="renameTextJohn.html">page 3 (end)</a></li>
+        </ol>
+        <li>Show only uncompleted items.</li>
+        <ol>
+            <li><a href ="preHide.html">page 1</a></li>
+            <li><a href ="hideCompleted.html">page 2 (loops back to page 1)</a></li>
+        </ol>
+        <li>Delete all completed items.</li>
+        <ol>
+            <li><a href ="preDeleteTask.html">page 1</a></li>
+            <li><a href ="deleteTask.html">page 2 (end)</a></li>
+        </ol>
     </ol>
 
 </body>
