--- a/addedTask(EatLunch).html
+++ b/addedTask(EatLunch).html
@@ -20,6 +20,7 @@
 
 		New task:<br> <input type = "text", id = "newTask", name="newTask">
 		<input type="button" id="create" value="Create Task"><br>
+		<input type="button" id="hide" value="Hide Completed Tasks">
 		<input type="button" id="clear" value="Clear Completed Tasks">
 	</div>
 
