--- a/deleteTask.html
+++ b/deleteTask.html
@@ -10,8 +10,12 @@
 	<div class="tasks">
 	<ul>
        
-        <input type = "checkbox", id="task3", name="task3", value="task3">
-        <label for="task3"> Call Mom</label>
+        <input type = "checkbox", id="task1", name="task1", value="task1">
+        <label for="task1"> Call Mom</label>
+		<input type="button" class="edit" value="edit"><br>
+
+		<input type = "checkbox", id="task2", name="task2", value="task2">
+		<label for="task2"> Delete completed items</label>
 		<input type="button" class="edit" value="edit">
 
 	</ul>
@@ -19,6 +23,7 @@
 
 	New task:<br> <input type = "text", id = "newTask", name="newTask">
 	<input type="button" id="create" value="Create Task"><br>
+	<input type="button" id="hide" value="Hide Completed Tasks">
 	<input type="submit" id="clear" value="Clear Completed Tasks">
 
 </form>
