--- a/preDeleteTask.html
+++ b/preDeleteTask.html
@@ -23,12 +23,17 @@
 
         <input type = "checkbox", id="task4", name="task4", value="task4" checked>
         <label for="task4"> Text John about bank statements</label>
-	    <input type="button" class="edit" value="edit">
+	    <input type="button" class="edit" value="edit"><br>
+
+        <input type = "checkbox", id="task5", name="task5", value="task5">
+        <label for="task5"> Delete completed items</label>
+        <input type="button" class="edit" value="edit">
     </ul>
     </div>
 
 	New task:<br> <input type = "text", id = "newTask", name="newTask">
     <input type="button" id="create" value="Create Task"><br>
+    <input type="button" id="hide" value="Hide Completed Tasks">
     <input type="submit" id="clear" value="Clear Completed Tasks">
     
 
