--- a/startEmptyList.html
+++ b/startEmptyList.html
@@ -9,10 +9,8 @@
     <p>Nothing to do!</p>
 	<form action = "addedTask(GrishamBook).html">
 		New task:<br> <input type = "text", id = "newTask", name="newTask">
-		<input type="submit" id="create" value="Create Task"><br>
-		<input type="button" id="clear" value="Clear Completed Tasks">
-
-</form>
+		<input type="submit" id="create" value="Create Task">
+	</form>
 
 </body>
 </html>
